--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-fileupload": "0.0.5",
+    "firebase": "^3.6.3",
     "morgan": "~1.7.0",
+    "multer": "^1.2.0",
     "pug": "~2.0.0-beta6",
     "serve-favicon": "~2.3.0"
   }
