--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "express": "~4.14.0",
     "express-fileupload": "0.0.5",
     "firebase": "^3.6.3",
-    "gcloud": "^0.37.0",
+    "google-cloud": "^0.45.0",
     "morgan": "~1.7.0",
-    "multer": "^1.2.0",
     "pug": "~2.0.0-beta6",
     "serve-favicon": "~2.3.0"
   }
