--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^0.6.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-fileupload": "0.0.5",
+    "express-gcs-uploader": "^1.0.13",
     "firebase": "^3.6.3",
     "google-cloud": "^0.45.0",
     "morgan": "~1.7.0",
