--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^3.6.3",
     "google-cloud": "^0.45.0",
     "morgan": "~1.7.0",
+    "multer": "^1.2.0",
     "pug": "~2.0.0-beta6",
     "serve-favicon": "~2.3.0"
   }
