--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.7.0",
     "multer": "^1.2.0",
     "pug": "~2.0.0-beta6",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0",
     "uuid-js": "^0.7.5"
   }
